Name:                iochan-conduit
Version:             0.1
Synopsis:            IO based primitives for conduit
License:             BSD3
License-file:        LICENSE
Author:              Alexander Vershilov
Maintainer:          alexander.vershilov@gmail.com
-- Copyright:           
Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

Flag bench
  Description:       build benchmark executables
  Default:           False

Library
  Exposed-modules:     
    Data.Conduit.Chan
    Control.Concurrent.BChan
    Control.Concurrent.BMChan
  Build-depends:       base
                     , conduit == 0.5.*
                     , transformers == 0.3.*
                     , vector == 0.9.*
  Ghc-options:       -Wall -O2


Executable bench
  if flag(bench)
      Buildable:      True
  else
      Buildable:      False

  main-is:            Main.hs
  ghc-options:        -rtsopts=all -threaded -O2
  hs-source-dirs:     bench/
  build-depends:      base
                    , conduit == 0.5.*
                    , transformers == 0.3.*
                    , criterion
                    , iochan-conduit
                    , stm-conduit
                    , stm

test-suite iochan-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test/
  ghc-options:        -rtsopts=all -threaded
  build-depends:      base
                    , conduit == 0.5.*
                    , transformers == 0.3.*
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , iochan-conduit

test-suite bchan-test
  type:               exitcode-stdio-1.0
  main-is:            BChan.hs
  hs-source-dirs:     test/
  ghc-options:        -rtsopts=all -threaded
  build-depends:      base
                    , transformers == 0.3.*
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , iochan-conduit
